# rudo

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  LICENSE-MIT  README.md  bench_runner.sh  clippy.toml  flamegraph.sh  miri-test.sh  publish.sh  rust-toolchain.toml  rustfmt.toml  test.sh
.cursor/rules/: specify-rules.mdc
.github/workflows/: ci.yml
.specify/memory/: constitution.md
.specify/templates/: tasks-template.md
crates/rudo-gc/: Cargo.toml  README.md
crates/rudo-gc-derive/: Cargo.toml  README.md
crates/rudo-gc-derive/src/: lib.rs
crates/rudo-gc-tokio-derive/: Cargo.toml  README.md
crates/rudo-gc-tokio-derive/src/: lib.rs
crates/rudo-gc/benches/: gui_overall.rs  incremental_pause.rs  sweep_benchmark.rs
crates/rudo-gc/docs/: vec-gc-usage.md
crates/rudo-gc/examples/: gui_benchmark.rs
crates/rudo-gc/src/: blacklisting_test.rs  cell.rs  gc.rs  heap.rs  lib.rs  metrics.rs  ptr.rs  roots.rs  scan.rs  stack.rs  sync.rs  trace.rs  trace_closure.rs  tracing.rs
crates/rudo-gc/src/gc/: collector.rs  gc.rs  incremental.rs  marker.rs  mod.rs  sync.rs  tracing.rs  worklist.rs  young_object_history.rs
crates/rudo-gc/src/gc/mark/: bitmap.rs  mod.rs  ownership.rs
crates/rudo-gc/src/handles/: async.rs  cross_thread.rs  local_handles.rs  mod.rs
crates/rudo-gc/src/handles/tests/: block_reuse.rs  escape_tests.rs  local_handles.rs  mod.rs
crates/rudo-gc/src/tokio/: guard.rs  mod.rs  root.rs  spawn.rs
crates/rudo-gc/tests/: basic.rs  bibop.rs  bug11_gchandle_resolve_after_origin_terminated.rs  bug17_gen_old_flag_not_cleared.rs  bug19_gcscope_spawn_bounds_check.rs  bug1_large_object_interior_uaf.rs  bug223_refcell_gccapture_silent_failure.rs  bug248_gcscope_spawn_liveness_check.rs  bug2_orphan_sweep_weak_ref.rs  bug3_generational_gen_old_flag.rs  bug3_write_barrier_multi_page.rs  bug4_tcb_leak.rs  bug527_mark_new_object_black_missing_try_mark.rs  bug530_incremental_write_barrier_small_object_path_missing_third_is_allocated_check.rs  bug629_weak_upgrade_missing_is_allocated_check.rs  bug79_vecdeque_linkedlist_missing_gccapture.rs  bug82_binaryheap_missing_gccapture.rs  bug88_cow_missing_trace_gccapture.rs  bug8_weak_is_alive_toctou.rs  bug91_gcbox_inc_weak_race.rs  concurrent_mark_sweep.rs  cross_heap_root.rs  cross_thread_handle.rs  cross_thread_weak_clone.rs  cycles.rs  cyclic_weak.rs  dag_sharing.rs  deep_tree_allocation_test.rs  derive.rs  dirty_page_list.rs  dummy_effect_test.rs  ephemeron.rs  external_reference_tracking.rs  gc_allocation_test.rs  gc_skip_dec_ref.rs  gc_thread_safe_cell.rs  gccell_derive_macro.rs  gccell_generic_test.rs  gccell_vec_corruption_regression.rs  handlescope_async.rs  (+55 more)
crates/rudo-gc/tests/benchmarks/: marking.rs  sweep_comparison.rs
crates/rudo-gc/tests/integration/: lock_ordering.rs  work_stealing.rs
crates/sys_alloc/: Cargo.toml  README.md
crates/sys_alloc/src/: lib.rs  unix.rs  windows.rs
docs/: 012-cross-thread-handle-plan.md  2026-01-01_22-27-34_Gemini_Google_Gemini.md  2026-01-03_12-50-49_Gemini_Google_Gemini.md  2026-01-08_01-17-57_Gemini_Google_Gemini.md  2026-01-10_08-00-31_Gemini_Google_Gemini.md  2026-01-12_23-35-01_Gemini_Google_Gemini.md  2026-01-13_19-22-17_Gemini_Google_Gemini.md  2026-01-14_23-56-14_Gemini_Google_Gemini.md  2026-01-29-1700-issues.md  2026-02-17_13-03-04_Gemini_Google_Gemini.md  Investigating Conservative Scanning.md  atomic-ordering.md  bdwgc-cross-platform-survey-1.md  bdwgc-cross-platform-survey-2.md  bug-1.md  bug-2.md  bug-3.md  bug-4-fix-plan.md  bug-4.md  chez-Parallel-Marking.md  chez-optimization-plan-1.md  chez-scheme-cross-platform-survey-1.md  concurrent-gc-primitives-spec.md  cross-platform-issue-1.md  cross-platform-plan-1.md  cross-platform-review-1.md  cyclic-improve-1.md  cyclic-plan-1.md  debug-suspicious-sweep-plan.md  gc-maturity-evaluation-2026-03-28.md  generational-gc-plan-0.7.1.md  generational-gc-plan-0.7.2.md  generational-gc-plan-0.7.md  generational-gc-plan-0.8.md  handlescope-spec-v2.md  handlescope-spec.md  incremental-gc-decision-meeting-2026-01-29.md  incremental-gc-spec-1.md  incremental-gc-spec-2.md  incremental-gc-spec-3.md  (+28 more)
docs/history-issues/: 2026-02-18_ISSUES_bug-hunt.md  2026-02-20_ISSUES_bug-hunt-2026-02-20.md  2026-02-20_ISSUES_bug-hunt-summary.md  rudo-gc-async-corruption-issue.md  rudo-gc-issue-incremental-marking.md
docs/issues/: 2026-02-19_ISSUE_bug10_gcbox_weak_ref_upgrade_construction.md  2026-02-19_ISSUE_bug11_gchandle_origin_thread_terminated.md  2026-02-19_ISSUE_bug12_generational_barrier_docs_inconsistent.md  2026-02-19_ISSUE_bug13_dead_code_write_barrier.md  2026-02-19_ISSUE_bug14_gcthreadsafecell_satb_overflow_ignored.md  2026-02-19_ISSUE_bug15_gcthreadsaferefmut_drop_uaf.md  2026-02-19_ISSUE_bug16_scan_page_redundant_index.md  2026-02-19_ISSUE_bug17_gen_old_flag_not_cleared.md  2026-02-19_ISSUE_bug18_gcrwlock_gcmutex_drop_missing_satb.md  2026-02-19_ISSUE_bug19_gcscope_spawn_bounds_check.md  2026-02-19_ISSUE_bug1_large_object_interior_uaf.md  2026-02-19_ISSUE_bug20_cross_thread_satb_buffer_unbounded.md  2026-02-19_ISSUE_bug21_scan_page_redundant_index_check.md  2026-02-19_ISSUE_bug22_hashmap_gccapture_iterator_invalidation.md  2026-02-19_ISSUE_bug23_gcthreadsafecell_gccapture_data_race.md  2026-02-19_ISSUE_bug25_write_barrier_gen_old_relaxed_ordering.md  2026-02-19_ISSUE_bug26_gc_deref_dead_flag.md  2026-02-19_ISSUE_bug27_weak_upgrade_toctou.md  2026-02-19_ISSUE_bug28_gcrwlock_capture_gc_ptrs_empty_slice.md  2026-02-19_ISSUE_bug2_orphan_sweep_weak_ref.md  2026-02-19_ISSUE_bug3_generational_barrier_gen_old_flag.md  2026-02-19_ISSUE_bug4_cross_thread_handle_tcb_leak.md  2026-02-19_ISSUE_bug5_incremental_worklist_unbounded.md  2026-02-19_ISSUE_bug6_multi_page_gccell_barrier.md  2026-02-19_ISSUE_bug7_unified_barrier_thread_check.md  2026-02-19_ISSUE_bug8_weak_is_alive_toctou.md  2026-02-19_ISSUE_bug9_weak_is_alive_refcount.md  2026-02-20_ISSUE_bug29_gchandle_clone_unregister_race.md  2026-02-20_ISSUE_bug30_gc_requested_relaxed_ordering.md  (+643 more)
scripts/: lazy-eager-sweep-bench-report.sh
specs/005-lazy-sweep/: plan.md  (+5 more)
(+107 files in other folders)
