[workspace]
resolver = "2"
members = ["crates/rudo-gc", "crates/rudo-gc-derive", "crates/sys_alloc"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.84"
license = "MIT OR Apache-2.0"
repository = "https://github.com/XuHaoJun/rudo"
keywords = ["garbage-collection", "gc", "memory", "smart-pointer"]
categories = ["memory-management", "rust-patterns"]

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"
