[workspace]
resolver = "2"
members = ["crates/rudo-gc", "crates/rudo-gc-derive", "crates/rudo-gc-tokio-derive", "crates/sys_alloc"]

[workspace.package]
version = "0.8.9"
edition = "2021"
rust-version = "1.84"
license = "MIT OR Apache-2.0"
repository = "https://github.com/XuHaoJun/rudo"
keywords = ["garbage-collection", "gc", "memory", "smart-pointer"]
categories = ["memory-management", "rust-patterns"]

[workspace.dependencies]
rudo-gc-derive = { path = "crates/rudo-gc-derive", version = "0.8" }
rudo-gc-tokio-derive = { path = "crates/rudo-gc-tokio-derive", version = "0.8" }
sys_alloc = { path = "crates/sys_alloc", version = "0.8" }
libc = "0.2"
windows-sys = "0.61"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "derive"] }
tempfile = "3.24"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"
