[package]
name = "rudo-gc-tokio-derive"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Proc-macro for rudo-gc tokio integration"
keywords = ["garbage-collection", "gc", "memory", "cycle-detection", "tokio"]
categories = ["memory-management", "rust-patterns"]
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full", "derive"] }
