[package]
name = "rudo-gc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "A garbage-collected smart pointer with automatic cycle detection using BiBOP memory layout and Mark-Sweep collection"
readme = "README.md"
keywords = ["garbage-collection", "gc", "memory", "smart-pointer", "cycle-detection"]
categories = ["memory-management", "rust-patterns"]

[features]
default = ["derive"]
derive = ["dep:rudo-gc-derive"]
test-util = []
tokio = ["dep:tokio", "dep:tokio-util"]

[dependencies]
rudo-gc-derive = { workspace = true, optional = true }
sys_alloc = { workspace = true }
libc = { workspace = true }
tokio = { version = "1.0", optional = true, default-features = false, features = ["rt", "rt-multi-thread", "test-util", "sync"] }
tokio-util = { version = "0.7", optional = true, features = ["rt"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true }

[dev-dependencies]
# For benchmarking (future)
# criterion = "0.5"

[lints]
workspace = true

# [[bench]]
# name = "alloc"
# harness = false

# [[bench]]
# name = "collect"
# harness = false
