[package]
name = "rudo-gc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "A garbage-collected smart pointer with automatic cycle detection using BiBOP memory layout and Mark-Sweep collection"
readme = "../../README.md"
keywords = ["garbage-collection", "gc", "memory", "smart-pointer", "cycle-detection"]
categories = ["memory-management", "rust-patterns"]

[features]
default = ["lazy-sweep", "derive"]
derive = ["dep:rudo-gc-derive"]
lazy-sweep = []
test-util = []
tokio = ["dep:tokio", "dep:tokio-util", "dep:rudo-gc-tokio-derive"]
tracing = ["dep:tracing"]
debug-suspicious-sweep = []
paranoid-sweep = ["debug-suspicious-sweep"]

[dependencies]
rudo-gc-derive = { workspace = true, optional = true }
rudo-gc-tokio-derive = { workspace = true, optional = true }
sys_alloc = { workspace = true }
libc = { workspace = true }
tokio = { version = "1.0", optional = true, default-features = false, features = ["rt", "rt-multi-thread", "test-util", "sync"] }
tokio-util = { version = "0.7", optional = true, features = ["rt"] }
parking_lot = "0.12"
crossbeam = "0.8"
crossbeam-queue = "0.3"
tracing = { version = "0.1", optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true }

[dev-dependencies]
# For benchmarking
criterion = "0.8.1"
# For atomic ordering verification
loom = "0.7"
# For tracing tests
tracing-subscriber = "0.3"

[lints]
workspace = true

[[bench]]
name = "sweep_benchmark"
harness = false
