[package]
name = "sys_alloc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Low-level system allocator primitives"
readme = "README.md"

[dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_System_Memory",
    "Win32_System_SystemInformation",
    "Win32_Foundation",
] }

[dev-dependencies]
tempfile = "3.8"

[lints]
workspace = true
