[package]
name = "sys_alloc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Low-level system allocator primitives"
readme = "README.md"

[dependencies]
libc = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = [
    "Win32_System_Memory",
    "Win32_System_SystemInformation",
    "Win32_Foundation",
] }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
